fix: need to install git

--- a/assemble-reproducible-migrations/Dockerfile
+++ b/assemble-reproducible-migrations/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update \
   wget \
   apt-transport-https \
   ca-certificates gnupg \
+  git \
   # Postgres 14 uses newer libreadline which is not available in package repos for the base Debian Bullseye image
   && wget -q -O - http://http.us.debian.org/debian/pool/main/r/readline/libreadline7_7.0-5_amd64.deb > /tmp/libreadline.deb \
   && echo "01e99d68427722e64c603d45f00063c303b02afb53d85c8d1476deca70db64c6 /tmp/libreadline.deb" | sha256sum -c \
